--- a/portfolio.html
+++ b/portfolio.html
@@ -123,6 +123,361 @@
               </div>
             </div>
 
+
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Publication">
+              <div class="portfolio-card">
+                <div class="portfolio-img">
+                  <img src="assets/img/portfolio/q11.jpg" alt="portfolio Item" class="img-fluid">
+                  <div class="portfolio-overlay">
+                    <a href="assets/img/portfolio/q11.jpg" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="https://www.jacc.org/doi/full/10.1016/j.jacc.2025.08.015" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                  </div>
+                </div>
+                <div class="portfolio-info">
+                  <h4>Global, Regional, and National Burden of Cardiovascular Diseases and Risk Factors in 204 Countries and Territories, 1990-2023</h4>
+                  <p>Orginal Research</p>
+                  <div class="portfolio-tags">
+                    <span>Cardiovascular Diseases </span>
+                    <span>Global Health</span>
+                    <span>Health Metrics</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
+
+
+                       <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Publication">
+              <div class="portfolio-card">
+                <div class="portfolio-img">
+                  <img src="assets/img/portfolio/q12.jpg" alt="portfolio Item" class="img-fluid">
+                  <div class="portfolio-overlay">
+                    <a href="assets/img/portfolio/q12.jpg" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="https://www.thelancet.com/journals/lancet/article/PIIS0140-6736(25)01917-8/fulltext#fig3" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                  </div>
+                </div>
+                <div class="portfolio-info">
+                  <h4> Global burden of 292 causes of death in 204 countries and territories and 660 subnational locations, 1990–2023: a systematic analysis for the Global Burden of Disease Study 2023</h4>
+                  <p>Orginal Research</p>
+                  <div class="portfolio-tags">
+                    <span>Causes of death</span>
+                    <span>Global Health</span>
+                    <span>Health Metrics</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
+
+
+
+                          <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Publication">
+              <div class="portfolio-card">
+                <div class="portfolio-img">
+                  <img src="assets/img/portfolio/q13.jpg" alt="portfolio Item" class="img-fluid">
+                  <div class="portfolio-overlay">
+                    <a href="assets/img/portfolio/q13.jpg" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="https://www.thelancet.com/journals/lancet/article/PIIS0140-6736(25)01637-X/fulltext#fig3" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                  </div>
+                </div>
+                <div class="portfolio-info">
+                  <h4> Burden of 375 diseases and injuries, risk-attributable burden of 88 risk factors, and healthy life expectancy in 204 countries and territories, including 660 subnational locations, 1990–2023: a systematic analysis for the Global Burden of Disease Study 2023</h4>
+                  <p>Orginal Research</p>
+                  <div class="portfolio-tags">
+                    <span>Diseases and injuries</span>
+                    <span>Global Health</span>
+                    <span>Health Metrics</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
+
+
+                                <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Publication">
+              <div class="portfolio-card">
+                <div class="portfolio-img">
+                  <img src="assets/img/portfolio/q14.jpeg" alt="portfolio Item" class="img-fluid">
+                  <div class="portfolio-overlay">
+                    <a href="assets/img/portfolio/q14.jpeg" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="https://www.thelancet.com/journals/lancet/article/PIIS0140-6736(25)01037-2/fulltext" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                  </div>
+                </div>
+                <div class="portfolio-info">
+                  <h4> Global, regional, and national trends in routine childhood vaccination coverage from 1980 to 2023 with forecasts to 2030: a systematic analysis for the Global Burden of Disease Study 2023</h4>
+                  <p>Orginal Research</p>
+                  <div class="portfolio-tags">
+                    <span>Childhood vaccination</span>
+                    <span>Global Health</span>
+                    <span>Health Metrics</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
+
+
+                  <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Publication">
+              <div class="portfolio-card">
+                <div class="portfolio-img">
+                  <img src="assets/img/portfolio/q15.png" alt="portfolio Item" class="img-fluid">
+                  <div class="portfolio-overlay">
+                    <a href="assets/img/portfolio/q15.png" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="https://www.thelancet.com/article/S0140-6736(25)01635-6/abstract" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                  </div>
+                </div>
+                <div class="portfolio-info">
+                  <h4>  The global, regional, and national burden of cancer, 1990–2023, with forecasts to 2050: a systematic analysis for the Global Burden of Disease Study 2023</h4>
+                  <p>Orginal Research</p>
+                  <div class="portfolio-tags">
+                    <span>Burden of cancer</span>
+                    <span>Global Health</span>
+                    <span>Health Metrics</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
+
+
+
+                  <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Publication">
+              <div class="portfolio-card">
+                <div class="portfolio-img">
+                  <img src="assets/img/portfolio/q16.jpg" alt="portfolio Item" class="img-fluid">
+                  <div class="portfolio-overlay">
+                    <a href="assets/img/portfolio/q16.jpg" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="https://www.thelancet.com/journals/lancet/article/PIIS0140-6736(25)01330-3/fulltext" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                  </div>
+                </div>
+                <div class="portfolio-info">
+                  <h4>  Global age-sex-specific all-cause mortality and life expectancy estimates for 204 countries and territories and 660 subnational locations, 1950–2023: a demographic analysis for the Global Burden of Disease Study 2023</h4>
+                  <p>Orginal Research</p>
+                  <div class="portfolio-tags">
+                    <span>Demographic analysis</span>
+                    <span>Global Health</span>
+                    <span>Health Metrics</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
+
+
+
+                   <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Publication">
+              <div class="portfolio-card">
+                <div class="portfolio-img">
+                  <img src="assets/img/portfolio/q17.png" alt="portfolio Item" class="img-fluid">
+                  <div class="portfolio-overlay">
+                    <a href="assets/img/portfolio/q17.png" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="https://link.springer.com/article/10.1186/s12936-023-04805-x" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                  </div>
+                </div>
+                <div class="portfolio-info">
+                  <h4>  AExamining the disparities of anti-malarial drug consumption among children under the age of five: a study of 5 malaria-endemic countries</h4>
+                  <p>Orginal Research</p>
+                  <div class="portfolio-tags">
+                    <span> Anti-malarial drug</span>
+                    <span>Global Health</span>
+                    <span>Health Metrics</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
+
+
+                 <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Publication">
+              <div class="portfolio-card">
+                <div class="portfolio-img">
+                  <img src="assets/img/portfolio/q18.PNG" alt="portfolio Item" class="img-fluid">
+                  <div class="portfolio-overlay">
+                    <a href="assets/img/portfolio/q18.PNG" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0300347" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                  </div>
+                </div>
+                <div class="portfolio-info">
+                  <h4>  Prevalence of unqualified sources of antimalarial drug prescription for children under the age of five: A study in 19 low- and middle-income countries</h4>
+                  <p>Orginal Research</p>
+                  <div class="portfolio-tags">
+                    <span> Anti-malarial drug</span>
+                    <span>Global Health</span>
+                    <span>Health Metrics</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
+
+
+                 <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Publication">
+              <div class="portfolio-card">
+                <div class="portfolio-img">
+                  <img src="assets/img/portfolio/q19.jpg" alt="portfolio Item" class="img-fluid">
+                  <div class="portfolio-overlay">
+                    <a href="assets/img/portfolio/q19.jpg" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="https://www.cell.com/heliyon/fulltext/S2405-8440(24)17501-9" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                  </div>
+                </div>
+                <div class="portfolio-info">
+                  <h4> Pooling the complex survey data across the 64 lower and middle-income countries: A study on antibiotic usage in under-five children</h4>
+                  <p>Orginal Research</p>
+                  <div class="portfolio-tags">
+                    <span> Antibiotic</span>
+                    <span>Global Health</span>
+                    <span>Health Metrics</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
+
+
+               <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Publication">
+              <div class="portfolio-card">
+                <div class="portfolio-img">
+                  <img src="assets/img/portfolio/q20.jpg" alt="portfolio Item" class="img-fluid">
+                  <div class="portfolio-overlay">
+                    <a href="assets/img/portfolio/q20.jpg" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="https://www.thelancet.com/journals/lancet/article/PIIS0140-6736(25)02503-6/fulltext" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                  </div>
+                </div>
+                <div class="portfolio-info">
+                  <h4> Disease burden attributable to intimate partner violence against females and sexual violence against children in 204 countries and territories, 1990–2023: a systematic analysis for the Global Burden of Disease Study 2023</h4>
+                  <p>Orginal Research</p>
+                  <div class="portfolio-tags">
+                    <span> sexual violence</span>
+                    <span>Global Health</span>
+                    <span>Health Metrics</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
+
+
+               <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Publication">
+              <div class="portfolio-card">
+                <div class="portfolio-img">
+                  <img src="assets/img/portfolio/q20.jpg" alt="portfolio Item" class="img-fluid">
+                  <div class="portfolio-overlay">
+                    <a href="assets/img/portfolio/q20.jpg" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="https://www.thelancet.com/journals/laninf/article/PIIS1473-3099(25)00689-9/abstract" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                  </div>
+                </div>
+                <div class="portfolio-info">
+                  <h4> Global burden of lower respiratory infections and aetiologies, 1990–2023: a systematic analysis for the Global Burden of Disease Study 2023</h4>
+                  <p>Orginal Research</p>
+                  <div class="portfolio-tags">
+                    <span> Respiratory infections</span>
+                    <span>Global Health</span>
+                    <span>Health Metrics</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
+
+
+
+
+
+              <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Publication">
+              <div class="portfolio-card">
+                <div class="portfolio-img">
+                  <img src="assets/img/portfolio/q22.webp" alt="portfolio Item" class="img-fluid">
+                  <div class="portfolio-overlay">
+                    <a href="assets/img/portfolio/q22.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="https://link.springer.com/article/10.1186/s12888-025-07234-z" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                  </div>
+                </div>
+                <div class="portfolio-info">
+                  <h4> The association of cyberbullying with major depressive disorders among Bangladeshi female adolescents: findings from the Bangladesh adolescent health and wellbeing survey 2019-20</h4>
+                  <p>Orginal Research</p>
+                  <div class="portfolio-tags">
+                    <span> cyberbullying </span>
+                    <span>Global Health</span>
+                    <span>Health Metrics</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
+
+              <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Publication">
+              <div class="portfolio-card">
+                <div class="portfolio-img">
+                  <img src="assets/img/portfolio/q23.jpg" alt="portfolio Item" class="img-fluid">
+                  <div class="portfolio-overlay">
+                    <a href="assets/img/portfolio/q23.jpg" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="https://www.thelancet.com/journals/lanchi/article/PIIS2352-4642(25)00303-7/fulltext" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                  </div>
+                </div>
+                <div class="portfolio-info">
+                  <h4> Quantifying the fatal and non-fatal burden of disease associated with child growth failure, 2000–2023: a systematic analysis from the Global Burden of Disease Study 2023</h4>
+                  <p>Orginal Research</p>
+                  <div class="portfolio-tags">
+                    <span> child growth failure </span>
+                    <span>Global Health</span>
+                    <span>Health Metrics</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
+
+
+
+                  <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Publication">
+              <div class="portfolio-card">
+                <div class="portfolio-img">
+                  <img src="assets/img/portfolio/q24.webp" alt="portfolio Item" class="img-fluid">
+                  <div class="portfolio-overlay">
+                    <a href="assets/img/portfolio/q24.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="https://www.nature.com/articles/s41598-025-28804-x" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                  </div>
+                </div>
+                <div class="portfolio-info">
+                  <h4> Spatiotemporal trends and machine learning-based prediction of temperature variability during the T. Aman rice-growing season in Bangladesh</h4>
+                  <p>Orginal Research</p>
+                  <div class="portfolio-tags">
+                    <span>  Machine learning </span>
+                    <span>Global Health</span>
+                    <span>Health Metrics</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Project">
               <div class="portfolio-card">
                 <div class="portfolio-img">
